--- a/task-manager-frontend/src/index.html
+++ b/task-manager-frontend/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-gray-50 min-h-screen">
   <app-root></app-root>
 </body>
 </html>
